Fix sensitive data visibility on dashboard (#1305)

--- a/main/http_server/axe-os/src/app/layout/styles/layout/_utils.scss
+++ b/main/http_server/axe-os/src/app/layout/styles/layout/_utils.scss
@@ -29,14 +29,20 @@
 
 .sensitive-data-hidden {
     [sensitive-data] {
+        font-size: 0;
+        pointer-events: none;
+
+        &::before,
+        &.p-inputtext {
+            font-size: $scale;
+        }
+
         &.p-inputtext {
             -webkit-text-security: disc;
-            pointer-events: none;
         }
 
         &::before {
-            content: '•••••';
-            font-size: $scale;
+            content: '••••••';
         }
     }
 }
